# VSCWhere

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: build.yml  release.yml
src/: discovery.rs  main.rs  models.rs  output.rs
